--- a/data/Info.plist
+++ b/data/Info.plist
@@ -44,6 +44,9 @@
 	<array>
 		<string>opengles-2</string>
 	</array>
+	<array>
+		<string>gamekit</string>
+	</array>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
